--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Object from '../components/Object.astro'
 
 <Layout title="Fan Tasia.">
 	<div class="container">
-		<div>logo</div>
+		<div>Icono</div>
 		<Nav />
 		<div><i class="fa-solid fa-bars"></i></div>
 	</div>
