incorporacion de elementos graficos y informacion principal

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,48 +1,17 @@
-<div class="card">
-	<h1 class="title-card">FANTA UVA</h1>
-	<p>Vuelve más divertidos tus momentos con el intenso y frutal sabor de Fanta Naranja.</p>
-	<div class="container-actions">
-		<button class="btn-card">PIDE TU FANTA</button>
-		<div class="inf-nutricional">
-			<span>Informacion Nutricional</span> 
-			<i class="fa-solid fa-caret-down"></i>
+<div class="px-3 flex items-center gap-1">
+	<div class="flex flex-col gap-2">
+		<h1 class="text-slate-50 text-5xl font-bold">FANTA UVA</h1>
+		<p class="text-slate-800 text-sm">Vuelve más divertidos tus momentos con el intenso y frutal sabor de Fanta Naranja.</p>
+		
+		<div class="flex flex-col gap-2">
+			<button class="bg-slate-50 p-3 rounded-md font-bold text-slate-800">PIDE TU FANTA</button>
+			<div class="flex gap-3 items-center text-slate-900">
+				<span class="text-sm text-stone-900">Informacion Nutricional</span> 
+				<i class="fa-solid fa-caret-down"></i>
+			</div>
 		</div>
+
 	</div>
 </div>
 
-<style>
-	.card{
-		width: 350px;
-		/* border: 1px solid red; */
-		display: flex;
-		flex-direction: column;
-		gap: 10px;
-	}
-
-	.title-card{
-		color: #ffff;
-		font-size: 3rem;
-	}
-
-	.container-actions{
-		display: flex;
-		flex-direction: column;
-		gap: 10px;
-	}
-
-	.btn-card{
-		padding: 10px 20px;
-		font-size: 1.5rem;
-		border-radius: 5px;
-		font-weight: bold;
-		border: 0px;
-		color: #3a3a3a;
-		box-shadow: 5px 5px 10px rgba(0,0,0, 0.5);
-	}
-
-	.inf-nutricional{
-		display: flex;
-		gap: 10px;
-	}
-
-</style>
+<!-- Locofy -->
