--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,25 +1,15 @@
-<nav class="nav">
-    <ul>
-        <li>Marcas</li>
-        <li>Descubre</li>
-        <li>Impacto</li>
-        <li>Comprar</li>
-    </ul>
-</nav>
 
-<style scoped>
-    .nav{
-        background-color: transparent;
-    }
-
-	.nav ul{
-		display: flex;
-		gap: 20px;
-	}
-
-	.nav ul li{
-		list-style: none;
-	}
-    
-    
-</style>
+<div class="flex justify-around items-center text-slate-50">
+    <div>Logo</div>
+    <nav>
+        <ul class="flex">
+            <li class="hover:bg-slate-50/10 px-3 py-2 rounded-sm cursor-pointer">Marcas</li>
+            <li class="hover:bg-slate-50/10 px-3 py-2 rounded-sm cursor-pointer">Descubre</li>
+            <li class="hover:bg-slate-50/10 px-3 py-2 rounded-sm cursor-pointer">Impacto</li>
+            <li class="hover:bg-slate-50/10 px-3 py-2 rounded-sm cursor-pointer">Comprar</li>
+        </ul>
+    </nav> 
+    <div>
+        <i class="fa-solid fa-bars"></i>
+    </div>
+</div>
