--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,7 +1,7 @@
-<div class="px-3 flex items-center gap-1">
-	<div class="flex flex-col gap-2">
-		<h1 class="text-slate-50 text-5xl font-bold">FANTA UVA</h1>
-		<p class="text-slate-800 text-sm">Vuelve más divertidos tus momentos con el intenso y frutal sabor de Fanta Naranja.</p>
+<div class=" px-3 flex items-center gap-1">
+	<div class="w-[300px] flex flex-col gap-2">
+		<h1 id="title" class="text-slate-50 text-5xl font-bold text-nowrap">FANTA UVA</h1>
+		<p id="description" class="text-slate-800 text-sm">Vuelve más divertidos tus momentos con el intenso y frutal sabor de Fanta Naranja.</p>
 		
 		<div class="flex flex-col gap-2">
 			<button class="bg-slate-50 p-3 rounded-md font-bold text-slate-800">PIDE TU FANTA</button>
@@ -14,4 +14,3 @@
 	</div>
 </div>
 
-<!-- Locofy -->
