--- a/src/components/Object.astro
+++ b/src/components/Object.astro
@@ -1,15 +1,18 @@
 ---
 import Grape from "./Grape.astro"
+import Sheet from "./Sheet.astro"
+import Ice from './Ice.astro'
 ---
 
 <div class="relative w-full flex justify-center">
     <div class="relative flex">
-        <img class="animate-jump relative rotate-12 shadow-object" width="120px" src="image/fanta.png" alt="fanta soda">
+        <img id="fanta_obj" class="relative rotate-12 shadow-object" width="160px" src="image/fantaNaranja.png" alt="fanta soda">
     </div>
-    <i class="absolute top-1/2 right-10 text-4xl text-slate-50 cursor-pointer fa-solid fa-chevron-right"></i>
-    <img class=" rotate-6 absolute right-12 bottom-5" width="110px" src="image/hielo.png" alt="hielo">
-    <img class=" rotate-90 absolute left-6 bottom-20" width=90px" src="image/hielo.png" alt="hielo">
-    <Grape style="rotate-2 absolute left-0 bottom-0" size="1" />
+    <i id="next_btn" class="absolute top-1/2 right-10 text-4xl text-slate-50 cursor-pointer fa-solid fa-chevron-right"></i>
+    <Ice style="rotate-[25deg] absolute right-[5px] bottom-5" size="0.9" />
+    <Ice style="rotate-[90deg] absolute -left-[60px] bottom-20" size="0.9" />
+    <Grape style="rotate absolute -left-[60px] -bottom-[20px]" size="1" />
+    
 </div>
 
 <style>
@@ -17,3 +20,5 @@ import Grape from "./Grape.astro"
         filter: drop-shadow(20px 20px 15px rgb(0, 0, 0, 0.5));
     }
 </style>
+
+<!-- https://discord.gg/QFcYbJp8 -->
