--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,7 +41,7 @@ const { title } = Astro.props;
 		font-family: calibri;
 		/* background-image: linear-gradient(62deg, #ffe565 0%, #ec7917 100%); */
 		/* background-color: #ba85d4; */
-		background-image: linear-gradient(120deg, #ba85d4 0%, #2b1664 100%);
+		background-image: linear-gradient(120deg, #f5de5d 0%, #ba4b1c 100%);
 		background-size: cover;
 		height: 100vh;
 	}
